---------------------------------------------------------------------------------------------------
Version: 1.3.23
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.3.22
Date: 2024-01-24
  Features:
    - Added new milestone types "item_consumption" and "fluid_consumption", which trigger on consumption rather than production. This has some niche uses for some modpacks.
      Because of the niche use, these can't be added via the settings GUI yet. You can add them in presets or with the import feature.
    - Added a player mod setting to allow hiding all incomplete milestones.
    - Added a "Reset" button in the settings GUI, to reset your settings back to the auto-detected set (preset + addons).

  Changes:
    - Infinite milestones marked as "hidden" will now only have the initial milestone hidden. Milestones created from the infinite milestone's completion will be visible.
    - Added a small text to fill the space when no milestones are visible at all, to make it look more intentionally empty.
    - Marked the selected preset name with "(Modified)" if the current set has been modified compared to the preset.
    - Preset updates:
      - Marked all character kills as "hidden".
      - SEK2 preset: Changed science pack order to account for recent SEK2 changes.
      - PyMods presets: Added Guar and Arqad Queen milestones, and fixed Phaidaisus milestones.
      - IR3 preset: Fixed petrochemical generator milestone.

---------------------------------------------------------------------------------------------------
Version: 1.3.21
Date: 2023-12-26
  Features:
    - Milestones presets can now mark milestones as "hidden". These milestones are still tracked but will only appear in the GUI after they are reached.

  Changes: